--- a/client/task-manager-client/src/session-manager/password-recovery/components/change.css
+++ b/client/task-manager-client/src/session-manager/password-recovery/components/change.css
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f8f9fa;
+    background-color:  #f0f0f0;
 }
 .container {
     background-color: #fff;
@@ -41,7 +43,7 @@ h2 {
     display: inline-block;
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background-color: #303f9f;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -49,5 +51,5 @@ h2 {
     cursor: pointer;
 }
 .btn:hover {
-    background-color: #0056b3;
+    background-color: #007bff;
 }
