close-open-menu-navbar

--- a/client/task-manager-client/src/task-manager/components/task.css
+++ b/client/task-manager-client/src/task-manager/components/task.css
@@ -7,3 +7,82 @@
   font-family: "Poppins", sans-serif;
 }
 
+body {
+  font-size: 1.2rem;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 8vh;
+  background-color: #303f9f;
+}
+
+.link-task {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.nav_menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 3rem;
+}
+
+.nav_toggler div {
+  width: 3rem;
+  height: 0.2rem;
+  margin: 0.4rem;
+  background-color: #fff;
+  transition: 0.4s ease-in;
+}
+
+.nav_toggler {
+  cursor: pointer;
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .nav_toggler {
+    display: block;
+  }
+
+  .nav_menu {
+    position: fixed;
+    top: 7vh;
+    right: 0;
+    width: 50%;
+    height: 93vh;
+    background: #303f9f;
+    flex-direction: column;
+    transform: translateX(100%);
+	transition: 0.5s ease-in;
+  }
+}
+
+.nav_active {
+  transform: translateX(0);
+}
+
+.toggle .line1 {
+transform: rotate(-45deg) translate(-4px, 5px);
+}
+
+.toggle .line2 {
+	opacity: 0;
+}
+
+.toggle .line3 {
+	transform: rotate(45deg) translate(-4px, -5px);
+}
