--- a/client/task-manager-client/src/task-manager/components/task.css
+++ b/client/task-manager-client/src/task-manager/components/task.css
@@ -7,82 +7,146 @@
   font-family: "Poppins", sans-serif;
 }
 
-body {
-  font-size: 1.2rem;
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  color: #fff;
-}
-
-.nav {
+.navbar {
+  background-color: #1f5156;
+  height: 80px;
   display: flex;
-  align-items: center;
   justify-content: center;
-  height: 8vh;
-  background-color: #303f9f;
+  align-items: center;
+  font-size: 1.2rem;
+  position: sticky;
+  top: 0;
+  z-index: 20;
 }
 
-.link-task {
-  text-transform: uppercase;
-  font-weight: bold;
+.nav-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 80px;
+  max-width: 1500px;
+  position: relative;
 }
 
-.nav_menu {
+.nav-logo {
+  color: #f5b921;
+  align-items: center;
+  margin-left: 20px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 2rem;
+  flex-grow: 1;
+
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  gap: 3rem;
+  justify-items: center;
 }
 
-.nav_toggler div {
+.nav-logo .icon {
+  display: inline-block;
   width: 3rem;
-  height: 0.2rem;
-  margin: 0.4rem;
-  background-color: #fff;
-  transition: 0.4s ease-in;
+  height: 3rem;
+  margin-left: 16px;
 }
 
-.nav_toggler {
-  cursor: pointer;
+.nav-menu {
+  display: flex;
+  list-style: none;
+  text-align: center;
+  margin-right: 2rem;
+}
+
+.nav-links {
+  color: #fff;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  height: 100%;
+  border-bottom: 3px solid transparent;
+}
+/* .fa-code {
+  margin-left: 1rem;
+} */
+
+.nav-item {
+  line-height: 40px;
+  margin-right: 1rem;
+}
+
+.nav-item:after {
+  content: "";
+  display: block;
+  height: 3px;
+  width: 0;
+  background: transparent;
+  transition: width 0.7s ease, background-color 0.5s ease;
+}
+
+.nav-item:hover:after {
+  width: 100%;
+  background: #ffdd40;
+}
+
+.nav-item .active {
+  color: #ffdd40;
+  border: 1px solid #ffdd40;
+}
+
+.nav-icon {
   display: none;
+  color: #f5b921;
 }
 
-@media screen and (max-width: 768px) {
-  .nav_toggler {
-    display: block;
-  }
+.nav-icon .icon {
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+}
 
-  .nav_menu {
-    position: fixed;
-    top: 7vh;
-    right: 0;
-    width: 50%;
-    height: 93vh;
-    background: #303f9f;
+@media screen and (max-width: 960px) {
+  .nav-menu {
+    display: flex;
     flex-direction: column;
-    transform: translateX(100%);
-	transition: 0.5s ease-in;
+    width: 100%;
+    border-top: 1pxsolid #fff;
+    position: absolute;
+    top: 80px;
+    left: -110%;
+    opacity: 1;
+    transition: all 0.5s ease;
   }
-}
 
-.nav_active {
-  transform: translateX(0);
-}
+  .nav-menu.active {
+    background: #1f5156;
+    left: 0px;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+  }
+  .nav-item .active {
+    color: #ffdd40;
+    border: none;
+  }
+  .nav-links {
+    padding: 1.5rem;
+    width: 100%;
+    display: table;
+  }
 
-.toggle .line1 {
-transform: rotate(-45deg) translate(-4px, 5px);
-}
+  .nav-logo .icon {
+    width: 2rem;
+    height: 2rem;
+  }
 
-.toggle .line2 {
-	opacity: 0;
-}
-
-.toggle .line3 {
-	transform: rotate(45deg) translate(-4px, -5px);
+  .nav-icon {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(-100%, -50%);
+    width: 2rem;
+    height: 2rem;
+    cursor: pointer;
+    color: #ffdd40;
+  }
 }
