--- a/client/task-manager-client/src/session-manager/pages/auth.css
+++ b/client/task-manager-client/src/session-manager/pages/auth.css
@@ -11,15 +11,8 @@ a {
   text-decoration: none;
 }
 
-body {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #f0f0f0;
-}
 
-.container {
+.containerauth {
   position: relative;
   width: 460px;
   height: 640px;
@@ -29,8 +22,7 @@ body {
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
 }
-
-.login-section {
+ .login-section {
   position: absolute;
   left: 50%;
   bottom: -88%;
@@ -108,14 +100,14 @@ body {
   color: #000;
 }
 
-.container form {
+.containerauth form {
   display: flex;
   flex-direction: column;
   gap: 20px;
   margin-top: 30px;
 }
 
-form input {
+.signup-section form input {
   outline: none;
   border: none;
   padding: 10px 15px;
@@ -128,6 +120,10 @@ form input {
 
 .login-section input {
   border: 1px solid #aaa;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 10px 15px;
+  border-radius: 8px;
 }
 
 form a {
@@ -138,7 +134,8 @@ form a {
   color: #fff;
 }
 
-form .btn {
+.signup-section form .btn
+.login-section  form .btn {
   margin-top: 15px;
   border: none;
   padding: 10px 15px;
@@ -154,16 +151,16 @@ form .btn {
   border: none;
 }
 
-.container.active .login-section {
+.containerauth.active .login-section {
   bottom: -12%;
   border-radius: 220px;
   box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1);
 }
 
-.container.active .login-section header {
+.containerauth.active .login-section header {
   opacity: 1;
 }
 
-.container.active .signup-section header {
+.containerauth.active .signup-section header {
   opacity: 0.6;
 }
