--- a/client/task-manager-client/src/session-manager/pages/password-recovery.css
+++ b/client/task-manager-client/src/session-manager/pages/password-recovery.css
@@ -11,18 +11,10 @@ a {
   text-decoration: none;
 }
 
-body {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #f0f0f0;
-}
-
-.container {
+.containerpass {
   position: relative;
   width: 460px;
-  height: 460px;
+  height: 395px;
   border-radius: 12px;
   padding: 20px 30px 120px;
   background: #303f9f;
@@ -34,13 +26,12 @@ body {
 .container-otp-password {
   position: absolute;
   left: 50%;
-  bottom: -90%;
-  transform: translateX(-50%) translateY(-1%);
+  bottom: -82%;
+  transform: translateX(-50%) translateY(-0.5%);
   width: calc(99% + 160px);
   padding: 20px 140px;
   background: #fff;
-  border-radius: 280px;
-  height: 99%;
+  border-radius: 120px;
   transition: all 0.6s ease;
 }
 
@@ -61,7 +52,7 @@ body {
   opacity: 0.6;
 }
 
-.container form {
+.containerpass form {
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -103,13 +94,10 @@ body {
 .code-inputs {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 20px;
-  margin-top: 15px;
   padding: 25px;
-  margin-bottom: 15px;
 }
 .code-inputs input {
-  width: 40px;
+  width: 45px;
   height: 40px;
   text-align: center;
   font-size: 18px;
@@ -132,17 +120,16 @@ body {
   align-content: center;
 }
 
-.container.active .container-otp-password {
-  bottom: -12%;
-  border-radius: 240px;
+.containerpass.active .container-otp-password {
+  bottom: -3%;
   box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1);
 }
 
-.container.active .container-otp-password header {
+.containerpass.active .container-otp-password header {
   opacity: 1;
   margin-top: 1px;
 }
 
-.container.active .container-forgot-password header {
+.containerpass.active .container-forgot-password header {
   opacity: 0.6;
 }
