--- a/client/task-manager-client/src/session-manager/password-recovery/components/change.css
+++ b/client/task-manager-client/src/session-manager/password-recovery/components/change.css
@@ -9,7 +9,7 @@ body {
     margin: 0;
     background-color:  #f0f0f0;
 }
-.container {
+.container-box {
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
