--- a/client/task-manager-client/src/task-manager/components/task.css
+++ b/client/task-manager-client/src/task-manager/components/task.css
@@ -64,13 +64,11 @@
   height: 100%;
   border-bottom: 3px solid transparent;
 }
-/* .fa-code {
-  margin-left: 1rem;
-} */
 
 .nav-item {
   line-height: 40px;
   margin-right: 1rem;
+  margin-top: 1rem;
 }
 
 .nav-item:after {
@@ -101,6 +99,46 @@
   display: inline-block;
   width: 2rem;
   height: 2rem;
+}
+
+.navbar .dropdown {
+  position: relative;
+  display: inline-block;
+}
+.navbar .dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+  background-color: white;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.navbar .dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.navbar .dropdown-content a:hover {
+  background-color: #ddd;
+  border-radius: 2px;
+}
+.navbar .dropdown:hover .dropdown-content {
+  display: block;
+  width: 150px;
+  border-radius: 2px;
+}
+.navbar .dropdown img {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+}
+.navbar .dropdown .dropbtn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: white;
+  font-size: 16px;
 }
 
 @media screen and (max-width: 960px) {
